Full-Ingress-Setup/web-deployment-two-containers.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: nginx
          name: nginx-server
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 10m
              memory: 25Mi
          readinessProbe:
            httpGet:
              path: /readiness
              port: 80
            initialDelaySeconds: 15
            timeoutSeconds: 1
