Full-Ingress-Setup/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-webserver
  labels:
    app: nginx
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
